
[float]
===== Bug fixes
////

=== Unreleased

https://github.com/elastic/apm-agent-python/compare/v5.3.1\...master[Check the diff]

// Unreleased changes go here
// When the next release happens, nest these changes under the "Python Agent version 5.x" heading

[float]
===== New Features

 * Added support for W3C `traceparent` and `tracestate` headers {pull}660[#660]
 * use Span ID as parent ID in errors if an error happens inside a span {pull}669[#669]


[[release-notes-5.x]]
=== Python Agent version 5.x

[[release-notes-5.3.2]]
==== v5.3.2

https://github.com/elastic/apm-agent-python/compare/v5.3.1\...v5.3.2[Check the diff]

[float]
===== Bug fixes

 * Added support for IPv6 address format when parsing urls {pull}649[#649]

[[release-notes-5.3.1]]
==== v5.3.1

https://github.com/elastic/apm-agent-python/compare/v5.3.0\...v5.3.1[Check the diff]

[float]
===== New Features

* Added support for shortening dicts in local variables {pull}638[#638]

[[release-notes-5.3.0]]
==== v5.3.0

https://github.com/elastic/apm-agent-python/compare/v5.2.3\...v5.3.0[Check the diff]

[float]
===== New Features

* Added instrumentation for mysql-connector and pymysql {pull}603[#603]
* Implemented stack_trace_limit configuration option {pull}623[#623]
* Autoinsert tracing middleware in django settings {pull}625[#625]

[float]
===== Bug fixes

* Fixed issue with transactions not being captured when errors occur in Flask {pull}635[#635]

[[release-notes-5.2.3]]
==== v5.2.3

https://github.com/elastic/apm-agent-python/compare/v5.2.2\...v5.2.3[Check the diff]

[float]
===== Bug fixes

* Ensure that metrics with value 0 are not collected if they have the `reset_on_collect` flag set {pull}615[#615]
* Unwrap postgres cursor for newly introduced psycopg2 extensions {pull}621[#621]
* Fix pod ID for kubernetes when using the systemd cgroup driver {pull}631[#631]

[[release-notes-5.2.2]]
==== v5.2.2

https://github.com/elastic/apm-agent-python/compare/v5.2.1\...v5.2.2[Check the diff]

[float]