@@ -35,6 +35,7 @@ markers =
     pymysql
     mysqldb
     aiohttp_client
+    aiopg
 
 [isort]
 line_length=120
