@@ -1,0 +1,4 @@
+aiopg
+psycopg2>=2.7 ; platform_python_implementation == 'CPython'
+psycopg2cffi>=2.7 ; platform_python_implementation == 'PyPy'
+-r requirements-base.txt
